2001-07-06  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-xml-file.[ch]: moved to gda-xml-document.[ch]

	* gda-xml-util.[ch]: new file containing several XML ulitity
	functions

2001-07-05  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-error.[ch]: moved here from the libgda-client library

2001-07-04  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-config.h: GDA_CONFIG_SECTION_LAST_CONNECTIONS moved from
	GNOME-DB, since the last successful connections will be saved
	at the libgda level

	* gda-config.c (gda_config_save_last_connection): new function

2001-06-26  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-config.c (gda_provider_list): CORBA_free the list returned
	by oaf_query

2001-06-13  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-util.c (gda_util_hash_to_list): added new function for converting
	a GHashTable into a GList (only adding, to the GList, the GHashTable's
	keys)

2001-06-01  Rodrigo Moya <rodrigo@gnome-db.org>

	* Makefile.am: don't build the libxmlquery until we fix the
	libxml1/libxml2/libxslt issue

2001-05-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* reverted last change, thus forcing new versions of
	automake/autoconf/libtool

2001-05-21  Rodrigo Moya <rodrigo@gnome-db.org>

	* Makefile.am, gda-xml-query/Makefile.am,
	gda-xml-query/testing/Makefile.am: converted the libxmlquery
	to a libtool static library (noinst_LTLIBRARIES)
	(fixes bug #54979)

2001-05-14  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-config.c: added gtk-doc documentation

2001-05-03  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-config.c (gda_provider_copy): make a copy of ALL the
	GdaProvider structure members
	
2001-04-25  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-config.c (gda_dsn_save): check pointer before using them

2001-04-09  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-config.c (gda_config_remove_section): implemented

2001-04-01  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-config.h: use "/apps" prefix for all GConf stuff

2001-03-05  Rodrigo Moya <rodrigo@gnome-db.org>
